--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "loadData": "ts-node scripts/load_csv.ts"
+    "dump-product-catalog": "ts-node scripts/dump-csv.ts"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
