--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,4 @@
 MONGO_URL=mongodb://comfy_sell_user:comfy_sell_password@localhost:27017
 DB_NAME=comfySell
 RESULTS_PER_PAGE=25
+SPEECH_SERVICE_URL=localhost:50051
