--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "dump-product-catalog": "ts-node scripts/dump-csv.ts"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.5.3",
+    "@grpc/proto-loader": "^0.6.9",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/microservices": "^8.2.6",
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/platform-express": "^8.0.0",
+    "audiobuffer-to-wav": "^1.0.0",
     "dotenv": "^10.0.0",
     "mongoose": "^6.1.5",
     "reflect-metadata": "^0.1.13",
@@ -56,6 +60,7 @@
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
+    "ts-proto": "^1.104.0",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
   },
